--- a/Exercise 7/NltkBasics.ipynb
+++ b/Exercise 7/NltkBasics.ipynb
@@ -181,7 +181,11 @@
     "        # interpunkcyjne? Jeśli usuniesz interpunkcje, co się dzieje ze skrótowcami? Jak obsłużyć słowa can't, o'clock,\n",
     "        # we'd itp.?\n",
     "        return re.split(RE_SPACES, text)\n",
-    "        "
+    "        \n",
+    "# Znaki interpunkcyjne występujące zaraz po słowach są uznawane za części tych słów.\n",
+    "# Ten tokenizer nie usuwa interpunkcji. can't, we'd można obsłużyć w ten sposób, że po \n",
+    "# wykryciu znaku ' można sprawdzić, czy z obu stron przylega on do liter.\n",
+    "# Jeśli tak to można usunąć ten znak i scalić litery w jeden wyraz."
    ]
   },
   {
@@ -197,12 +201,19 @@
      "text": [
       "['dear', '@microsoft', 'the', 'newooffice', 'for', 'mac', 'is', 'great', 'and', 'all,', 'but', 'no', 'lync', 'update?', \"c'mon.\"]\n",
       "['@microsoft', 'how', 'about', 'you', 'make', 'a', 'system', 'that', \"doesn't\", 'eat', 'my', 'friggin', 'discs.', 'this', 'is', 'the', '2nd', 'time', 'this', 'has', 'happened', 'and', 'i', 'am', 'so', 'sick', 'of', 'it!']\n",
-      "['not', 'available']\n"
+      "['not', 'available']\n",
+      "['not', 'available']\n",
+      "['if', 'i', 'make', 'a', 'game', 'as', 'a', '#windows10', 'universal', 'app.', 'will', '#xboxone', 'owners', 'be', 'able', 'to', 'download', 'and', 'play', 'it', 'in', 'november?', '@majornelson', '@microsoft']\n",
+      "['microsoft,', 'i', 'may', 'not', 'prefer', 'your', 'gaming', 'branch', 'of', 'business.', 'but,', 'you', 'do', 'make', 'a', 'damn', 'fine', 'operating', 'system.', '#windows10', '@microsoft']\n",
+      "['@mikewolf1980', '@microsoft', 'i', 'will', 'be', 'downgrading', 'and', 'let', '#windows10', 'be', 'out', 'for', 'almost', 'the', '1st', 'yr', 'b4', 'trying', 'it', 'again.', '#windows10fail']\n",
+      "['@microsoft', '2nd', 'computer', 'with', 'same', 'error!!!', '#windows10fail', 'guess', 'we', 'will', 'shelve', 'this', 'until', 'sp1!', 'http://t.co/qcchlkuy8q']\n",
+      "['just', 'ordered', 'my', '1st', 'ever', 'tablet;', '@microsoft', 'surface', 'pro', '3,', 'i7/8gb', '512gb', 'ssd.', 'hopefully', 'it', 'works', 'out', 'for', 'dev', 'to', 'replace', 'my', 'laptop', '=)']\n",
+      "['after', 'attempting', 'a', 'reinstall,', 'it', 'still', 'bricks,', 'says,', '\"windows', 'cannot', 'finish', 'installing,\"', 'or', 'somesuch.', '@microsoft', 'may', 'have', 'cost', 'me', '$600.']\n"
      ]
     }
    ],
    "source": [
-    "for i in tweets.index[:3]:\n",
+    "for i in tweets.index[:10]:\n",
     "    tweet = BeforeTokenizationNormalizer.normalize(tweets.iat[i])\n",
     "    words_simple = SimpleTokenizer.tokenize(tweet)\n",
     "    print(words_simple)"
@@ -549,7 +560,7 @@
     "# nie wszystkie tokeny są rzadkimi słowami, \n",
     "# jedynie występują one rzadko w tym zbiorze danych\n",
     "\n",
-    "# tokeny liczbowe możnaby oznaczyć jednym wspólnym tokenem, np. <value>"
+    "# tokeny liczbowe można by oznaczyć jednym wspólnym tokenem, np. <value>"
    ]
   },
   {
@@ -630,9 +641,9 @@
       "=================== Results ===================\n",
       "min_word_count =  1\n",
       "            Positive    Neutral     Negative   \n",
-      "F1        [0.24       0.         0.72151899]\n",
-      "Precision [0.3        0.         0.59685864]\n",
-      "Recall    [0.2   0.    0.912]\n",
+      "F1        [0.72151899 0.24       0.        ]\n",
+      "Precision [0.59685864 0.3        0.        ]\n",
+      "Recall    [0.912 0.2   0.   ]\n",
       "\n",
       "\n",
       "Training classifier...\n",
@@ -640,9 +651,9 @@
       "=================== Results ===================\n",
       "min_word_count =  2\n",
       "            Positive    Neutral     Negative   \n",
-      "F1        [0.2        0.02857143 0.72258065]\n",
-      "Precision [0.2        0.2        0.60540541]\n",
-      "Recall    [0.2        0.01538462 0.896     ]\n",
+      "F1        [0.72258065 0.2        0.02857143]\n",
+      "Precision [0.60540541 0.2        0.2       ]\n",
+      "Recall    [0.896      0.2        0.01538462]\n",
       "\n",
       "\n",
       "Training classifier...\n",
@@ -650,9 +661,9 @@
       "=================== Results ===================\n",
       "min_word_count =  3\n",
       "            Positive    Neutral     Negative   \n",
-      "F1        [0.23255814 0.0952381  0.69257951]\n",
-      "Precision [0.17857143 0.21052632 0.62025316]\n",
-      "Recall    [0.33333333 0.06153846 0.784     ]\n",
+      "F1        [0.69257951 0.23255814 0.0952381 ]\n",
+      "Precision [0.62025316 0.17857143 0.21052632]\n",
+      "Recall    [0.784      0.33333333 0.06153846]\n",
       "\n",
       "\n",
       "Training classifier...\n",
@@ -660,9 +671,9 @@
       "=================== Results ===================\n",
       "min_word_count =  4\n",
       "            Positive    Neutral     Negative   \n",
-      "F1        [0.23809524 0.15730337 0.70250896]\n",
-      "Precision [0.18518519 0.29166667 0.63636364]\n",
-      "Recall    [0.33333333 0.10769231 0.784     ]\n",
+      "F1        [0.70250896 0.23809524 0.15730337]\n",
+      "Precision [0.63636364 0.18518519 0.29166667]\n",
+      "Recall    [0.784      0.33333333 0.10769231]\n",
       "\n",
       "\n",
       "Training classifier...\n",
@@ -670,9 +681,9 @@
       "=================== Results ===================\n",
       "min_word_count =  5\n",
       "            Positive    Neutral     Negative   \n",
-      "F1        [0.25       0.20930233 0.69402985]\n",
-      "Precision [0.17073171 0.42857143 0.65034965]\n",
-      "Recall    [0.46666667 0.13846154 0.744     ]\n",
+      "F1        [0.69402985 0.25       0.20930233]\n",
+      "Precision [0.65034965 0.17073171 0.42857143]\n",
+      "Recall    [0.744      0.46666667 0.13846154]\n",
       "\n",
       "\n",
       "Training classifier...\n",
@@ -680,9 +691,9 @@
       "=================== Results ===================\n",
       "min_word_count =  15\n",
       "            Positive    Neutral     Negative   \n",
-      "F1        [0.15384615 0.12987013 0.67164179]\n",
-      "Precision [0.1        0.41666667 0.62937063]\n",
-      "Recall    [0.33333333 0.07692308 0.72      ]\n",
+      "F1        [0.67164179 0.15384615 0.12987013]\n",
+      "Precision [0.62937063 0.1        0.41666667]\n",
+      "Recall    [0.72       0.33333333 0.07692308]\n",
       "\n",
       "\n",
       "Training classifier...\n",
@@ -690,9 +701,9 @@
       "=================== Results ===================\n",
       "min_word_count =  25\n",
       "            Positive    Neutral     Negative   \n",
-      "F1        [0.0952381 0.        0.7114094]\n",
-      "Precision [0.07407407 0.         0.61271676]\n",
-      "Recall    [0.13333333 0.         0.848     ]\n",
+      "F1        [0.7114094 0.0952381 0.       ]\n",
+      "Precision [0.61271676 0.07407407 0.        ]\n",
+      "Recall    [0.848      0.13333333 0.        ]\n",
       "\n",
       "\n",
       "Training classifier...\n",
@@ -700,9 +711,9 @@
       "=================== Results ===================\n",
       "min_word_count =  45\n",
       "            Positive    Neutral     Negative   \n",
-      "F1        [0.05405405 0.         0.71710526]\n",
-      "Precision [0.04545455 0.         0.60893855]\n",
-      "Recall    [0.06666667 0.         0.872     ]\n",
+      "F1        [0.71710526 0.05405405 0.        ]\n",
+      "Precision [0.60893855 0.04545455 0.        ]\n",
+      "Recall    [0.872      0.06666667 0.        ]\n",
       "\n",
       "\n",
       "Training classifier...\n",
@@ -710,9 +721,9 @@
       "=================== Results ===================\n",
       "min_word_count =  65\n",
       "            Positive    Neutral     Negative   \n",
-      "F1        [0.         0.14814815 0.73482428]\n",
-      "Precision [0.         0.375      0.61170213]\n",
-      "Recall    [0.         0.09230769 0.92      ]\n",
+      "F1        [0.73482428 0.         0.14814815]\n",
+      "Precision [0.61170213 0.         0.375     ]\n",
+      "Recall    [0.92       0.         0.09230769]\n",
       "\n",
       "\n"
      ]
